package com.maxqiu.demo.P10_Flyweight;

import lombok.AllArgsConstructor;
import lombok.Getter;
import lombok.Setter;

/**
 * 用户（外部状态）
 * 
 * @author Max_Qiu
 */
@Getter
@Setter
@AllArgsConstructor
public class User {

    private String name;

}
