package com.maxqiu.demo.P10_Flyweight;

/**
 * 网站
 * 
 * @author Max_Qiu
 */
public abstract class WebSite {

    /**
     * 抽象方法
     */
    public abstract void use(User user);

}
